change title of landing page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Louis Charpigny's profile</title>
+	<title>profile of louis charpigny</title>
 	<meta  name="description" content="this is the profile of Louis">
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 
 <div class="container">
 	<div class="card-white">
-		<h1>Hello I'm Louis</h1>
+		<h1>Hello this is my new page title Louis charpigny</h1>
 		<img src="images/pic.jpeg" class="img-circle" alt="Louis Charpigny">
 		<p>
 			Product Manager Expert
@@ -40,7 +40,7 @@
 		</P>
 	</div>
 	<div class="card-white">
-		h2>Follow me </h2>
+		<h2>Follow me </h2>
 		<UL>
 			<li>
 				<a href="https://twitter.com/Louis_Charpigny">Twitter</a>
